--- a/assets/css/myworks.css
+++ b/assets/css/myworks.css
@@ -6,6 +6,9 @@ header{
     text-align: center;
     padding: 10px;
 }
+header:hover{
+    cursor: pointer;
+}
 a{
     font-size: 20px;
     text-decoration: none;
