I've updated the blog page and the ethiopian flag to have an emblem

--- a/assets/css/ethiopia.css
+++ b/assets/css/ethiopia.css
@@ -19,3 +19,9 @@ body{
   font-size:10px;
   background-color:rgba(39, 39, 39, 0.68); /* Background color of Body */
 }
+#emblem{
+  width: 150px;
+  height: 150px;
+  margin: 15% 33% auto;
+  position: 
+}
