--- a/assets/css/Flags.css
+++ b/assets/css/Flags.css
@@ -1,24 +1,91 @@
 body{
     font-family: comic sans ms;
 }
+header{
+    background-color: none;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+}
+header:hover{
+    cursor: pointer;
+}
+#all{
+    display: flex;
+}
+#container{
+    display: flex;
+    flex-flow: wrap;
+    margin-top: 130px;
+    text-align: center;
+    vertical-align: center;
+}
+.flags{
+    margin: 30px;
+    padding: 10px;
+    flex: 1 50px;
+    flex-flow: wrap;
+    text-align: center;
+    background-color: #eee;
+    vertical-align: middle;
+    
+    top: 50%-50px;
+    left: 50%-50px;
+}
 a{
     font-size: 20px;
     text-decoration: none;
-    color: red;
 }
-header{
-    background-color: #eee;
-    text-align: center;
-    padding: 10px;
+#pole{
+    margin-top: 20px;
+    margin-left: -200px;
+    margin-right: 90%;
+    height: 700px;
 }
-#container{
-    text-align: justify;
-    display: flex;
-    flex-flow: wrap;
+#flag{
+    border-radius: 5px;
+    width: 161px;
+    height: 100px;
+    position: absolute;
+    left: 145px;
+    top: 500px;
+    -webkit-animation: mymove 5s infinite; 
 }
-div{
-    flex: 1 200px;
-    padding: 10px;
-    margin: 20px;
-    background-color: #eee;
+
+@-webkit-keyframes mymove {
+    0%   {top: 500px;}
+    100% {top: 90px;}
+}
+
+#caption{
+position: absolute;
+top: 153px;
+left: 299px;
+height: 104px;
+font-family: Garamond, serif;
+line-height: 1em;
+color: #9ACE15;
+font-weight: bold;
+font-size: 104px;
+text-shadow: 0px 0px 0 rgb(46,91,170),1px 1px 0 rgb(31,76,155),2px 2px 0 rgb(17,62,141),3px 3px 0 rgb(2,47,126),4px 4px 0 rgb(-12,33,112),5px 5px 0 rgb(-27,18,97), 6px 6px 0 rgb(-41,4,83),7px 7px 6px rgba(0,0,0,0.6),7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
+border-bottom-width: 20px;
+text-align: center;
+-webkit-animation: 3s multicolor infinite;
+}
+@-webkit-keyframes multicolor{
+0%{
+color:#ff9933;
+}
+33%{
+
+color:#ffffff;
+}
+66%{
+
+color:#138808;
+}
+100%{
+color:#ff9933;
+}	
 }
