--- a/assets/css/Flags.css
+++ b/assets/css/Flags.css
@@ -11,6 +11,11 @@ header{
 header:hover{
     cursor: pointer;
 }
+footer > div{
+    background-color: #eee;
+    padding: 10px;
+    margin: 10px;
+  }
 #all{
     display: flex;
 }
