--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -7,9 +7,18 @@ header{
   text-align: center;
   font-family: comic sans ms;
 }
-#by{
-  margin: 10px 50px;
+#the_body{
+  margin: 10px 10%;
 }
-footer{
-  
+footer > div:nth-of-type(1){
+  display: flex;
+  width: 200px;
+}
+footer > div > a{
+  flex: 1 100px;
+}
+footer > div:nth-of-type(2){
+  background-color: #eee;
+  padding: 10px;
+  margin: 10px;
 }
